syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "swrc/proto/pb";

message Snippet {
    string id = 1;
    int64 version = 2;
    string code_snippet = 3;
    string message = 4;
    string topic_id = 5;
    google.protobuf.Timestamp created_at = 6;
};